Use Java 12-17 features and APIs