@@ -20,7 +20,6 @@ import java.time.Duration;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.apache.commons.lang3.StringUtils;
@@ -161,7 +160,7 @@ public class BatchConfiguration
         }
         return Stream.of(StringUtils.split(list, ','))
                      .map(String::strip)
-                     .collect(Collectors.toList());
+                     .toList();
     }
 
     public static final class StoryExecutionConfiguration
