@@ -1,5 +1,5 @@
 /*
- * Copyright 2019-2021 the original author or authors.
+ * Copyright 2019-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -19,7 +19,6 @@ package org.vividus.steps.ui.model;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.junit.jupiter.params.ParameterizedTest;
@@ -47,9 +46,7 @@ class StringSortingOrderTests
     @MethodSource("dataProvider")
     void shouldReturnSortingComparator(StringSortingOrder sortingOrder, List<String> expected)
     {
-        List<String> sorted = List.of(KEY_1, KEY_2, KEY_3, KEY_4).stream()
-                                                                 .sorted(sortingOrder.getSortingType())
-                                                                 .collect(Collectors.toList());
+        List<String> sorted = Stream.of(KEY_1, KEY_2, KEY_3, KEY_4).sorted(sortingOrder.getSortingType()).toList();
         assertEquals(expected, sorted);
     }
 }
