@@ -1,5 +1,5 @@
 /*
- * Copyright 2019-2021 the original author or authors.
+ * Copyright 2019-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -19,7 +19,6 @@ package org.vividus.azure.storage.queue;
 import java.time.Duration;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import com.azure.core.credential.TokenCredential;
 import com.azure.core.util.BinaryData;
@@ -99,7 +98,7 @@ public class StorageQueueSteps
                 .stream()
                 .map(PeekedMessageItem::getBody)
                 .map(BinaryData::toString)
-                .collect(Collectors.toList());
+                .toList();
         variableContext.putVariable(scopes, variableName, messages);
     }
 
