@@ -1,5 +1,5 @@
 /*
- * Copyright 2019-2021 the original author or authors.
+ * Copyright 2019-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -25,7 +25,6 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import org.apache.commons.csv.CSVFormat;
 import org.apache.commons.csv.CSVRecord;
@@ -82,7 +81,7 @@ class CsvReaderTests
     {
         URL url = getCsvResource();
         List<CSVRecord> result = csvReader.readCsvFile(url, FIRST_HEADER, SECOND_HEADER);
-        assertEquals(CSV_RECORDS, result.stream().map(CSVRecord::toMap).collect(Collectors.toList()));
+        assertEquals(CSV_RECORDS, result.stream().map(CSVRecord::toMap).toList());
     }
 
     private URL getCsvResource()
