@@ -1,5 +1,5 @@
 /*
- * Copyright 2019-2021 the original author or authors.
+ * Copyright 2019-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -54,8 +54,7 @@ public enum MongoCommand
         @Override
         public Function<Object, Object> apply(Function<Object, Object> chain, Bson argument)
         {
-            return chain.andThen(
-                out -> stream(cast(out, FindIterable.class).spliterator(), false).collect(Collectors.toList()));
+            return chain.andThen(out -> stream(cast(out, FindIterable.class).spliterator(), false).toList());
         }
     },
     COUNT(CommandType.TERMINAL)
