@@ -1,5 +1,5 @@
 /*
- * Copyright 2019-2022 the original author or authors.
+ * Copyright 2019-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -190,9 +190,7 @@ public class AzureDevOpsFacade
             return operations;
         }
 
-        List<Step> manualPart = steps.stream()
-                                     .takeWhile(Step::isManual)
-                                     .collect(toList());
+        List<Step> manualPart = steps.stream().takeWhile(Step::isManual).toList();
 
         List<Step> automatedSteps = steps;
 
