@@ -1,5 +1,5 @@
 /*
- * Copyright 2019-2020 the original author or authors.
+ * Copyright 2019-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -15,8 +15,6 @@
  */
 
 package org.vividus.spring;
-
-import static java.util.stream.Collectors.toList;
 
 import java.util.List;
 import java.util.Map;
@@ -39,7 +37,7 @@ public final class BeanFactoryUtils
         return streamOfBeansByNamePrefix(beanFactory, listBeanNamePrefix, List.class)
                 .map(m -> (List<T>) m)
                 .flatMap(List::stream)
-                .collect(toList());
+                .toList();
     }
 
     @SuppressWarnings("unchecked")
