@@ -1,5 +1,5 @@
 /*
- * Copyright 2019-2022 the original author or authors.
+ * Copyright 2019-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -34,7 +34,7 @@ public abstract class AbstractFilteringTableTransformer implements ExtendedTable
     {
         List<String> selectedColumnNames = Stream.of(StringUtils.split(byColumnNames, ';'))
                 .map(String::trim)
-                .collect(Collectors.toList());
+                .toList();
 
         String undefinedColumns = selectedColumnNames
                 .stream().filter(element -> !allColumnNames.contains(element)).collect(Collectors.joining("; "));
